--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+imx-vpu-hantro (1.17.0) stable; urgency=medium
+
+  * NXP release
+
+ -- Josua Mayer <josua@solid-run.com>  Tue, 14 Apr 2020 14:04:19 +0000
+
 imx-vpu-hantro (1.11.0) stable; urgency=low
 
   * Initial release
