--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+imx-vpu-hantro (1.19.0) stable; urgency=medium
+
+  * NXP release
+
+ -- Josua Mayer <josua@solid-run.com>  Thu, 29 Oct 2020 15:26:45 +0000
+
 imx-vpu-hantro (1.17.0) stable; urgency=medium
 
   * NXP release
